<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Result"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/firstEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="first num" />

    <EditText
        android:id="@+id/secondEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="second num" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="calculate" />


</LinearLayout>